<resources>
    <string name="app_name">NEWPRAC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="heading">TIC TAC TOE</string>
    <string name="grid">mygrid</string>
    <string name="empty">emptycell</string>
    <string name="reset">gameReset</string>
    <string name="x_s_turn_tap_to_play">X\'s turn - Tap to play</string>
    <string name="ResetButton">Reset Game</string>
</resources>